Implemented common_objects for loop in main

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,59 @@
       "3   Butler  1872  (SAMUEL, BUTLER, ., \\n, August, 7, ,, 1901, \\n...  \n",
       "4    James  1877  (THE, AMERICAN, \\n\\n, by, Henry, James, \\n\\n\\n...  \n",
       "{'Sense_and_Sensibility': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'North_and_South': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'A_Tale_of_Two_Cities': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'Erewhon': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'The_American': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'Dorian_Gray': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'Tess_of_the_DUrbervilles': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'The_Golden_Bowl': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'The_Secret_Garden': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'Portrait_of_the_Artist': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'The_Black_Moth': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'Orlando': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}, 'Blood_Meridian': {'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}}\n",
-      "{'Sense_and_Sensibility': 12.3623, 'North_and_South': 8.1855, 'A_Tale_of_Two_Cities': 11.3894, 'Erewhon': 16.2754, 'The_American': 9.423, 'Dorian_Gray': 6.4401, 'Tess_of_the_DUrbervilles': 9.1877, 'The_Golden_Bowl': 13.8232, 'The_Secret_Garden': 5.738, 'Portrait_of_the_Artist': 7.7276, 'The_Black_Moth': 5.567, 'Orlando': 11.0472, 'Blood_Meridian': 7.0531}\n"
+      "{'Sense_and_Sensibility': 12.3623, 'North_and_South': 8.1855, 'A_Tale_of_Two_Cities': 11.3894, 'Erewhon': 16.2754, 'The_American': 9.423, 'Dorian_Gray': 6.4401, 'Tess_of_the_DUrbervilles': 9.1877, 'The_Golden_Bowl': 13.8232, 'The_Secret_Garden': 5.738, 'Portrait_of_the_Artist': 7.7276, 'The_Black_Moth': 5.567, 'Orlando': 11.0472, 'Blood_Meridian': 7.0531}\n",
+      "Sense_and_Sensibility\n",
+      "[('her', 397), ('it', 380), ('him', 279), ('you', 214), ('what', 197), ('them', 191), ('me', 177), ('which', 114), ('herself', 94), ('nothing', 79)]\n",
+      "\n",
+      "\n",
+      "North_and_South\n",
+      "[('it', 556), ('him', 450), ('her', 436), ('what', 352), ('me', 345), ('you', 277), ('them', 184), ('which', 170), ('herself', 146), ('margaret', 120)]\n",
+      "\n",
+      "\n",
+      "A_Tale_of_Two_Cities\n",
+      "[('it', 451), ('him', 409), ('you', 240), ('me', 232), ('her', 196), ('them', 167), ('what', 153), ('himself', 132), ('that', 111), ('hand', 92)]\n",
+      "\n",
+      "\n",
+      "Erewhon\n",
+      "[('it', 230), ('me', 221), ('them', 158), ('which', 151), ('him', 104), ('what', 101), ('that', 81), ('her', 48), ('myself', 47), ('us', 40)]\n",
+      "\n",
+      "\n",
+      "The_American\n",
+      "[('it', 583), ('you', 479), ('me', 393), ('him', 369), ('her', 306), ('what', 292), ('that', 182), ('them', 149), ('something', 114), ('_', 105)]\n",
+      "\n",
+      "\n",
+      "Dorian_Gray\n",
+      "[('it', 300), ('me', 256), ('him', 252), ('you', 188), ('that', 178), ('what', 166), ('them', 98), ('her', 92), ('something', 52), ('himself', 50)]\n",
+      "\n",
+      "\n",
+      "Tess_of_the_DUrbervilles\n",
+      "[('her', 496), ('it', 425), ('him', 294), ('me', 245), ('you', 239), ('what', 185), ('them', 171), ('that', 128), ('which', 121), ('herself', 90)]\n",
+      "\n",
+      "\n",
+      "The_Golden_Bowl\n",
+      "[('it', 1174), ('her', 700), ('what', 654), ('him', 543), ('them', 307), ('me', 246), ('you', 237), ('that', 224), ('herself', 183), ('nothing', 125)]\n",
+      "\n",
+      "\n",
+      "The_Secret_Garden\n",
+      "[('it', 368), ('him', 220), ('her', 168), ('what', 135), ('me', 110), ('them', 94), ('you', 89), ('things', 76), ('that', 61), ('mary', 57)]\n",
+      "\n",
+      "\n",
+      "Portrait_of_the_Artist\n",
+      "[('him', 295), ('it', 180), ('them', 103), ('what', 102), ('you', 91), ('me', 75), ('that', 57), ('which', 56), ('himself', 49), ('eyes', 47)]\n",
+      "\n",
+      "\n",
+      "The_Black_Moth\n",
+      "[('him', 404), ('you', 359), ('it', 344), ('me', 331), ('her', 270), ('what', 116), ('that', 102), ('_', 98), ('hand', 92), ('himself', 83)]\n",
+      "\n",
+      "\n",
+      "Orlando\n",
+      "[('it', 192), ('her', 162), ('him', 149), ('them', 94), ('which', 85), ('what', 70), ('that', 46), ('himself', 41), ('herself', 41), ('us', 39)]\n",
+      "\n",
+      "\n",
+      "Blood_Meridian\n",
+      "[('it', 415), ('him', 289), ('them', 288), ('what', 110), ('head', 91), ('horse', 85), ('horses', 79), ('pistol', 64), ('man', 62), ('you', 53)]\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -506,7 +558,11 @@
     "    print(get_fks(df))\n",
     "    df = pd.read_pickle(Path.cwd() / \"pickles\" /\"parsed.pickle\")\n",
     "    # print(adjective_counts(df))\n",
-    "    \"\"\" \n",
+    "    for i, row in df.iterrows():\n",
+    "        print(row[\"title\"])\n",
+    "        print(common_objects(row[\"parsed\"], 10))\n",
+    "        print(\"\\n\")\n",
+    "    \"\"\"\n",
     "    for i, row in df.iterrows():\n",
     "        print(row[\"title\"])\n",
     "        print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
