Implemented subjects_by_verb_count function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -404,13 +404,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subjects_by_verb_pmi(doc, target_verb):\n",
-    "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
-    "    pass"
+    "def subjects_by_verb_count(doc, verb = \"hear\", n=10 ):\n",
+    "    \"\"\"Returns the title of each novel and a list of the ten most common syntactic subjects\n",
+    "    of the verb 'to hear' (in any tense) in the text, ordered by their frequency.\"\"\"\n",
+    "    verb_subjects = []\n",
+    "    for token in doc:\n",
+    "        # check if it is a verb with lemma \"hear\".\n",
+    "        if token.lemma_ == verb and token.pos_ == \"VERB\":\n",
+    "            for child in token.children:\n",
+    "                if child.dep_ == \"nsubj\":\n",
+    "                    verb_subjects.append(child.text.lower())\n",
+    "    return Counter(verb_subjects).most_common(n)"
    ]
   },
   {
@@ -419,9 +427,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subjects_by_verb_count(doc, verb):\n",
+    "def subjects_by_verb_pmi(doc, target_verb):\n",
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
-    "    pass\n"
+    "    pass"
    ]
   },
   {
