Uncommented subjects_by_verb_count loop

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -546,6 +546,58 @@
       "Blood_Meridian\n",
       "[('it', 415), ('him', 289), ('them', 288), ('what', 110), ('head', 91), ('horse', 85), ('horses', 79), ('pistol', 64), ('man', 62), ('you', 53)]\n",
       "\n",
+      "\n",
+      "Sense_and_Sensibility\n",
+      "[('i', 28), ('you', 19), ('she', 14), ('elinor', 6), ('he', 6), ('they', 5), ('me', 4), ('jennings', 3), ('brandon', 1), ('us', 1)]\n",
+      "\n",
+      "\n",
+      "North_and_South\n",
+      "[('she', 59), ('i', 42), ('he', 23), ('you', 15), ('they', 12), ('margaret', 10), ('me', 5), ('we', 5), ('thornton', 3), ('who', 3)]\n",
+      "\n",
+      "\n",
+      "A_Tale_of_Two_Cities\n",
+      "[('i', 21), ('he', 18), ('you', 12), ('she', 10), ('they', 5), ('monseigneur', 2), ('me', 2), ('one', 1), ('jerry', 1), ('we', 1)]\n",
+      "\n",
+      "\n",
+      "Erewhon\n",
+      "[('i', 38), ('he', 4), ('they', 3), ('she', 2), ('we', 1), ('who', 1), ('destruction', 1), ('machines', 1), ('one', 1)]\n",
+      "\n",
+      "\n",
+      "The_American\n",
+      "[('he', 17), ('i', 13), ('you', 10), ('she', 5), ('newman', 4), ('they', 2), ('we', 2), ('who', 1), ('me', 1), ('one', 1)]\n",
+      "\n",
+      "\n",
+      "Dorian_Gray\n",
+      "[('i', 24), ('he', 16), ('one', 3), ('you', 3), ('lovers', 1), ('hast', 1), ('who', 1), ('jars', 1), ('dorian', 1)]\n",
+      "\n",
+      "\n",
+      "Tess_of_the_DUrbervilles\n",
+      "[('she', 37), ('i', 20), ('they', 12), ('you', 8), ('he', 6), ('who', 6), ('tess', 4), ('clare', 3), ('lady', 2), ('queen', 1)]\n",
+      "\n",
+      "\n",
+      "The_Golden_Bowl\n",
+      "[('she', 16), ('he', 6), ('you', 5), ('maggie', 2), ('him', 2), ('man', 1), ('they', 1), ('who', 1), ('amerigo', 1), ('which', 1)]\n",
+      "\n",
+      "\n",
+      "The_Secret_Garden\n",
+      "[('i', 28), ('she', 25), ('he', 16), ('you', 8), ('we', 6), ('mary', 3), ('lennox', 2), ('they', 2), ('colin', 2), ('one', 2)]\n",
+      "\n",
+      "\n",
+      "Portrait_of_the_Artist\n",
+      "[('he', 61), ('you', 12), ('i', 8), ('stephen', 5), ('who', 2), ('they', 1), ('boy', 1), ('burst', 1), ('listener', 1), ('that', 1)]\n",
+      "\n",
+      "\n",
+      "The_Black_Moth\n",
+      "[('i', 37), ('he', 5), ('you', 5), ('we', 4), ('richard', 2), ('she', 2), ('street', 1), (\"ye've\", 1), ('bettison', 1), ('madam', 1)]\n",
+      "\n",
+      "\n",
+      "Orlando\n",
+      "[('she', 21), ('he', 7), ('orlando', 4), ('one', 3), ('they', 2), ('i', 2), ('god', 1), ('we', 1), ('that', 1), ('which', 1)]\n",
+      "\n",
+      "\n",
+      "Blood_Meridian\n",
+      "[('he', 25), ('they', 20), ('you', 5), ('i', 5), ('who', 3), ('she', 2), ('all', 2), ('we', 2), ('man', 2), ('nobody', 1)]\n",
+      "\n",
       "\n"
      ]
     }
@@ -570,12 +622,12 @@
     "        print(row[\"title\"])\n",
     "        print(common_objects(row[\"parsed\"], 10))\n",
     "        print(\"\\n\")\n",
-    "    \"\"\"\n",
+    "\n",
     "    for i, row in df.iterrows():\n",
     "        print(row[\"title\"])\n",
     "        print(subjects_by_verb_count(row[\"parsed\"], \"hear\"))\n",
     "        print(\"\\n\")\n",
-    "\n",
+    "    \"\"\"\n",
     "    for i, row in df.iterrows():\n",
     "        print(row[\"title\"])\n",
     "        print(subjects_by_verb_pmi(row[\"parsed\"], \"hear\"))\n",
