Modified subjects_by_verb_count function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -404,13 +404,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def subjects_by_verb_count(doc, verb = \"hear\", n=10 ):\n",
-    "    \"\"\"Returns the title of each novel and a list of the ten most common syntactic subjects\n",
-    "    of the verb 'to hear' (in any tense) in the text, ordered by their frequency.\"\"\"\n",
+    "    \"\"\"Returns a list of the ten most common syntactic subjects of a verb (in any tense) in the text, ordered by their frequency.\"\"\"\n",
     "    verb_subjects = []\n",
     "    for token in doc:\n",
     "        # check if it is a verb with lemma \"hear\".\n",
@@ -418,7 +417,8 @@
     "            for child in token.children:\n",
     "                if child.dep_ == \"nsubj\":\n",
     "                    verb_subjects.append(child.text.lower())\n",
-    "    return Counter(verb_subjects).most_common(n)"
+    "    common_verb_subjects = Counter(verb_subjects).most_common(n)\n",
+    "    return common_verb_subjects"
    ]
   },
   {
