Implemented subjects_by_verb_pmi structure

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     "import pandas as pd\n",
     "import re\n",
     "import pickle\n",
-    "\n",
+    "import math\n",
     "\n",
     "from pathlib import Path\n",
     "from nltk.tokenize import word_tokenize, sent_tokenize\n",
@@ -414,13 +414,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def subjects_by_verb_pmi(doc, target_verb):\n",
-    "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
-    "    pass"
+    "def subjects_by_verb_pmi(doc, verb =\"hear\", n=10):\n",
+    "    \"\"\"Returns a list of the n most common syntactic subjects of a verb (in any tense) in the text, \n",
+    "    ordered by their Pointwise Mutual Information.\"\"\"\n",
+    "\n",
+    "    # PMI measure how strongly the subject is associated with that verb. \n",
+    "    # It calculates the joint probability of the subject and the verb appearing.\n",
+    "\n",
+    "    total_tokens = len(doc)\n",
+    "    # Count words as tokens that only consist of alphabetic characters.\n",
+    "    word_counts = Counter(token.text.lower() for token in doc if token.is_alpha)\n",
+    "    # Reutilize subjects_by_verb_count function to get all the subjects of the verb.\n",
+    "    subj_counts = subjects_by_verb_count(doc, verb, n=None)\n",
+    "\n",
+    "\n",
+    "    word_prob = word_counts/ total_tokens\n",
+    "    joint_prob = subj_counts / total_tokens\n",
+    "    if word_prob > 0:\n",
+    "        pmi = math.log2(joint_prob / word_prob) \n",
+    "    else: 0\n",
+    "\n",
+    "    subjs_by_verb_pmi = sorted(pmi_scores)\n",
+    "    return subjs_by_verb_pmi\n"
    ]
   },
   {
