Implemented subjects_by_verb_pmi function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -426,19 +426,23 @@
     "    # It calculates the joint probability of the subject and the verb appearing.\n",
     "\n",
     "    total_tokens = len(doc)\n",
-    "    # Count words as tokens that only consist of alphabetic characters.\n",
-    "    word_counts = Counter(token.text.lower() for token in doc if token.is_alpha)\n",
-    "    # Reutilize subjects_by_verb_count function to get all the subjects of the verb.\n",
-    "    subj_counts = subjects_by_verb_count(doc, verb, n=None)\n",
+    "    # Counts tokens that only consist of alphabetic characters.\n",
+    "    word_count = Counter(token.text.lower() for token in doc if token.is_alpha)\n",
+    "    # Reutilizes subjects_by_verb_count function to get all the subjects of the verb.\n",
+    "    subj_count = subjects_by_verb_count(doc, verb, n=None)\n",
+    "    # Converts to dictionary to extract counts value by key subject.\n",
+    "    subj_count = dict(subj_count)\n",
     "\n",
-    "\n",
-    "    word_prob = word_counts/ total_tokens\n",
-    "    joint_prob = subj_counts / total_tokens\n",
-    "    if word_prob > 0:\n",
-    "        pmi = math.log2(joint_prob / word_prob) \n",
-    "    else: 0\n",
-    "\n",
-    "    subjs_by_verb_pmi = sorted(pmi_scores)\n",
+    "    pmi_scores = {}\n",
+    "    for subject, subj_count in subj_count.items():\n",
+    "        word_count = word_count [subject] / total_tokens\n",
+    "        joint_prob = subj_count / total_tokens\n",
+    "        if word_count > 0:\n",
+    "          pmi = math.log2(joint_prob / word_count) \n",
+    "        else: 0\n",
+    "    \n",
+    "    # Converts to list of tuples sorted by pmi score and gets only the firts n elements.\n",
+    "    subjs_by_verb_pmi = sorted(pmi_scores.items(), key=lambda x: x[1], reverse=True)[:n]\n",
     "    return subjs_by_verb_pmi\n"
    ]
   },
